# artwork-extractor

./: .gitignore  CMakeLists.txt  README.md  artwork_extractor.cpp  artwork_extractor.def
.github/workflows/: ci.yml
include/: base64.hpp  string.hpp
